--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,16 @@ services:
     image: 4901-capstone2020/tempmonsensor
     container_name: TempMonSensor
     restart: unless-stopped
+  
   TempMonWeb:
     image: 4901-capstone2020/tempmonweb
     container_name: TempMonWeb
+    environment:
+     - SENSOR_URL=http://tempmonsensor # URL to access Sensor API
     volumes:
      - db:/app/db/
     restart: unless-stopped
     ports:
-     - 8080:80
+            - 8080:80
 volumes:
   db:
