--- a/temp-mon-backend.yaml
+++ b/temp-mon-backend.yaml
@@ -1,3 +1,16 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: temp-mon-web-backend
+spec:
+  type: ClusterIP
+  selector:
+    app: temp-mon-web-backend
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 80
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,5 +29,6 @@ spec:
       containers:
       - name: temp-mon-web-backend
         image: sifotes/4901capstone-tempmonsensor
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
