--- a/docker-compose_edge.yml
+++ b/docker-compose_edge.yml
@@ -1,19 +1,14 @@
 version: '3'
 services:
-  TempMonSensor:
-    image: 4901-capstone2020/tempmonsensor
-    container_name: TempMonSensor
-    restart: unless-stopped
-  
   TempMonWeb:
     image: 4901-capstone2020/tempmonweb
     container_name: TempMonWeb
     environment:
-     - SENSOR_URL=http://tempmonsensor # URL to access Sensor API
+     - SENSOR_URL=http://sensor # URL to access Sensor API
     volumes:
      - db:/app/db/
     restart: unless-stopped
     ports:
-     - 8080:80
+     - 80:80
 volumes:
   db:
