--- a/TempMonWeb/Dockerfile
+++ b/TempMonWeb/Dockerfile
@@ -8,9 +8,6 @@ RUN mkdir /app/db/
 RUN npm install
 RUN npm install pm2 -g
 
-RUN apt update && apt -y install python3 python3-pip mongodb
-RUN python3 -m pip install pymongo requests
-
-COPY init.py /app/
 ADD files /app/files/
-CMD ["python3", "/app/init.py"]
+
+CMD ["pm2-runtime", "start", "/app/files/server.js", "--watch"]
