--- a/temp-mon-edge.yaml
+++ b/temp-mon-edge.yaml
@@ -8,7 +8,7 @@ spec:
     app: temp-mon-web-backend
   ports:
   - protocol: TCP
-    port: 80
+    port: 8081
     targetPort: 80
 ---
 apiVersion: apps/v1
@@ -28,7 +28,7 @@ spec:
       #   nodeType: iot  # Location of desired node
       containers:
       - name: temp-mon-web-backend
-        image: sifotes/4901capstone-tempmonsensor
+        image: sifotes/4901capstone-tempmonsensor #Public image from DockerHub
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
