--- a/temp-mon-web.yaml
+++ b/temp-mon-web.yaml
@@ -1,30 +1,28 @@
 apiVersion: v1
 kind: Service
 metadata: 
-  name: temp-mon-lb
+  name: tempmon-frontend
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
-    app: temp-mon-web-frontend
+    app: temp-mon-web
   ports:
-  - port: 80
+  - port: 8080
     targetPort: 80
-  externalIPs:
-  - 192.168.1.217 #Temporarily hardcoded - this is the "public" IP.
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: temp-mon-web-frontend
+  name: temp-mon-web
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: temp-mon-web-frontend
+      app: temp-mon-web
   template:
     metadata:
       labels:
-        app: temp-mon-web-frontend
+        app: temp-mon-web
     spec:
       # nodeSelector:
       #   location: subcloud  # Location of desired node
