--- a/temp-mon-web.yaml
+++ b/temp-mon-web.yaml
@@ -1,14 +1,16 @@
 apiVersion: v1
 kind: Service
-metadata: 
-  name: tempmon-frontend
+metadata:
+  name: nginx
 spec:
-  type: ClusterIP
-  selector:
-    app: temp-mon-web
   ports:
-  - port: 8080
+  - name: http
+    port: 80
+    protocol: TCP
     targetPort: 80
+  selector:
+    app:  temp-mon-web
+  type: LoadBalancer
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -36,8 +38,8 @@ spec:
         - name: temp-db
           mountPath: /app/db
         env:
-        - name: SENSOR_URL
-          value: "http://temp-mon-web-backend"
+        - name: DB_URL
+          value: "http://temp-mon-db"
       volumes:
       - name: temp-db
         emptyDir: {}
